--- a/styles/scss/links.scss
+++ b/styles/scss/links.scss
@@ -111,9 +111,9 @@ $links_image_path: g.$image_path + "links/";
     background-color: c.$off-black;
     border: 2px groove black;
     flex-direction: row;
-    
+
     img {
-        width: 170px;
+        width: 158px;
         height: 125px;
         margin: auto;
         padding: 10px;
